Downgraded from Java 11 to Java 8, to support dependent applications using Java 8 and above .